--- a/TaskManager/src/main/resources/application.properties
+++ b/TaskManager/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Database
-spring.datasource.url=jdbc:mysql://localhost:3306/taskmanager?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/taskmanager?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true&useJDBCCompliantTimezoneShift=true&&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 
