--- a/TaskManager/src/main/resources/application.properties
+++ b/TaskManager/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Database
 spring.datasource.url=jdbc:mysql://localhost:3306/taskmanager?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true&useJDBCCompliantTimezoneShift=true&&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=Sunny
-spring.datasource.password=Sunny123
+spring.datasource.username=root
+spring.datasource.password=root
 
 #spring.thymeleaf.prefix=/WEB-INF
 #spring.thymeleaf.suffix=.html
