--- a/TaskManager/src/main/webapp/TMAngular/package.json
+++ b/TaskManager/src/main/webapp/TMAngular/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.2",
     "angular-local-storage": "^0.7.1",
     "core-js": "^2.5.4",
     "ngx-cookie-service": "^2.1.0",
