--- a/TaskManager/src/main/webapp/TMAngular/package.json
+++ b/TaskManager/src/main/webapp/TMAngular/package.json
@@ -11,11 +11,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^7.3.8",
     "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
+    "@angular/forms": "^7.2.14",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
