--- a/TaskManager/.classpath
+++ b/TaskManager/.classpath
@@ -30,6 +30,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_201/src.zip"/>
+	<classpathentry exported="true" kind="lib" path="C:/Program Files/Java/jdk1.8.0_191/src.zip"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
