--- a/TaskManager/src/main/webapp/TMAngular/package.json
+++ b/TaskManager/src/main/webapp/TMAngular/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/core": "^7.3.8",
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.15",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -22,8 +22,10 @@
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.2",
     "angular-local-storage": "^0.7.1",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "ngx-cookie-service": "^2.1.0",
+    "ngx-toastr": "^10.0.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
